feature-templates/nCino/dataset/01yO3G1U-Config Values/.store/metadata/objects/LLC_BI__CFG_CKJ__c.object
<CustomObject>
    <description>Configuration Key links ( CFG_CKJs) link functional areas of the product. They Specify what actions ( Config values) should be taken and when (Config Keys)</description>
    <fields>
        <fullName>LLC_BI__CFG_ConfigKeys__c</fullName>
        <description>This field is optional and is manually populated. It is used as a Master Detail look up to Configuration Keys, allowing the keys to be linked to the Configuration Values.</description>
        <label>CFG_ConfigKeys</label>
        <referenceTo>LLC_BI__CFG_ConfigKey__c</referenceTo>
        <relationshipLabel>CFG_CKJs</relationshipLabel>
        <relationshipName>CFG_CKJs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CFG_ConfigValue__c</fullName>
        <description>This field is optional and is manually populated. It is used as a Master Detail look up to Configuration Value, allowing the values to be linked to the Configuration Keys.</description>
        <label>CFG_ConfigValue</label>
        <referenceTo>LLC_BI__CFG_ConfigValue__c</referenceTo>
        <relationshipLabel>CFG_CKJs</relationshipLabel>
        <relationshipName>CFG_CKJs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and is manually populated.</description>
        <label>Product Type</label>
        <referenceTo>LLC_BI__Product_Type__c</referenceTo>
        <relationshipLabel>Product Type</relationshipLabel>
        <relationshipName>Product_Type</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and is manually populated.</description>
        <label>Product</label>
        <referenceTo>LLC_BI__Product__c</referenceTo>
        <relationshipLabel>Product</relationshipLabel>
        <relationshipName>Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The system automatically populates this field with a unique external identifier that associates the record with its matching record in an external system. The field can also be used to efficiently associate related records when importing data into nCino, without the need to know the internal ID for the record.</description>
        <externalId>true</externalId>
        <inlineHelpText>Enter a unique external identifier.</inlineHelpText>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LLC_BI__sObject_Type__c</fullName>
        <description>Administrators populate this optional lookup field to specify the object the CFG_CKJ applies to.</description>
        <label>sObject Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LLC_BI__Loan__c</fullName>
                </value>
                <value>
                    <fullName>LLC_BI__Treasury_Service__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CFG_CKJ</label>
    <nameField>
        <displayFormat>CFG-CKJ{00000000}</displayFormat>
        <label>CFG_CJ Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CFG_CKJs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>